add search categories